# rainmeter

./: CMakeLists.txt  README.md  start.sh  uninstall.sh
Common/: CMakeLists.txt  LinuxSmokeTest.cpp  MathParser.cpp  MathParser.h  PathUtil.cpp  PathUtil.h  StringUtil.cpp  StringUtil.h
Docs/: Building.md
Linux/: rainmeter-linux.sh
